# cdc-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.connect  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: docker-compose.mongodb.yml  docker-compose.sqlserver.yml  docker-compose.yml
docker/connect/: Dockerfile
docker/mongodb/: setup.sh
docker/postgres/: init.sql
docker/sqlserver/: init.sql
docs/: benchmark-results.md  benchmarks.md  case-study-high-throughput.md  deployment.md  lakehouse.md  scaling.md  transports.md
examples/: demo-config.yaml  mongodb-pipeline.yaml  platform-gcp-kafka.yaml  platform-kinesis.yaml  platform-msk.yaml  platform-pubsub.yaml  platform.yaml  postgres_cdc_demo.py  sqlserver-pipeline.yaml
helm/cdc-platform/: Chart.yaml  values.yaml
helm/cdc-platform/templates/: _helpers.tpl  configmap.yaml  kafka-connect-deployment.yaml  kafka-connect-service.yaml
scripts/: test-e2e.sh
src/cdc_platform/: __init__.py  cli.py
src/cdc_platform/config/: defaults.py  loader.py  models.py  templates.py
src/cdc_platform/lakehouse/: maintenance.py  time_travel.py
src/cdc_platform/observability/: __init__.py  health.py  http_health.py  metrics.py
src/cdc_platform/pipeline/: runner.py
src/cdc_platform/sinks/: __init__.py  base.py  factory.py  iceberg.py  postgres.py  webhook.py
src/cdc_platform/sources/: __init__.py  base.py  error_router.py  factory.py  monitor.py  provisioner.py
src/cdc_platform/streaming/: __init__.py  auth.py  consumer.py  dlq.py  producer.py  registry.py  schema_monitor.py  topics.py
tests/benchmark/: conftest.py  debug_kafka.py  helpers.py  test_backpressure.py  test_high_throughput.py  test_multi_partition.py  test_sink_latency.py  test_throughput.py  test_transport_throughput.py  test_wal_decoder_throughput.py
tests/e2e/: pipeline.yaml  platform.yaml
tests/integration/: conftest.py  test_kafka_auth_integration.py  test_kinesis_transport.py  test_lakehouse_e2e.py  test_mongodb_cdc.py  test_pipeline_e2e.py  test_postgres_cdc.py  test_pubsub_transport.py  test_schema_registry.py  test_sqlserver_cdc.py  test_wal_decoder_integration.py  test_wal_reader_integration.py
tests/unit/: test_backpressure.py  test_config_models.py  test_config_models_cloud.py  test_consumer.py  test_debezium_client.py  test_defaults.py  test_dlq.py  test_http_health.py  test_iceberg_sink.py  test_kafka_auth.py  test_kafka_provisioner.py  test_kafka_source.py  test_kinesis_checkpoint.py  test_kinesis_provisioner.py  test_kinesis_source.py  test_lag_monitor.py  test_lakehouse.py  test_loader.py  test_partition_worker.py  test_pipeline_runner.py  test_postgres_sink.py  test_protocol_conformance.py  test_pubsub_provisioner.py  test_pubsub_source.py  test_schema_monitor.py  test_sink_config.py  test_sink_factory.py  test_source_factory.py  test_templates.py  test_topic_naming.py  test_wal_decoder.py  test_wal_reader.py  test_webhook_sink.py
(+31 files in other folders)
